changed travis file!

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 before_script:
   - mv env_example .env
+  - sudo /etc/init.d/postgresql stop
   - docker-compose up --build -d
   - sleep 15
 script:
