--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,17 @@ ENV/
 # Rope project settings
 .ropeproject
 
-#Mac
+# Mac
 .DS_Store
 tags
 server.log
+
+
+# Ignore Front-end
+/node_modules
+.npm-debug*
+npm-debug*
+/dist/*.js
+/dist/*.css
+/dist/static/
+/dist/index.html
