--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,14 +15,15 @@ services:
     volumes:
       - ./back-end/:/usr/src/app
     env_file: .env
-  #frontend:
-    #restart: always
-    #build: ./front-end
-    #ports:
-    #  - "8082:8082"
-    #links:
-    #  - backend:backend
-    #env_file: .env
+  frontend:
+    build: ./front-end
+    ports:
+      - "8082:8082"
+    env_file: .env
+    command: npm run dev
+    volumes:
+      - ./front-end/:/usr/src/app
+      - /usr/src/app/node_modules
   postgresdb:
     restart: always
     image: postgres:latest
